# neu_ros_driver

./: ReadMe_CN.txt  ReadMe_EN.txt  s2_120config.txt  s2_70config.txt
src/: CMakeLists.txt  package.xml  test.h
src/include/: driver.h  neuv_defs.hpp
src/lib/: libneusdk.so.2.7.6  libneusdk.so.2.9.6
src/lib/arm/: libneusdk.so.2.9.7
src/lib/x86/: lib_version  libneusdk-16.04.so.3.0.3  libneusdk-18.04.so.3.0.3  libneusdk.so.2.9.7  libneusdk.so.3.0.2  libneusdk18.04.so.3.0.3  libneusdk_boost_1_70.so.3.0.2
src/params/: driverparams.yaml
src/src/: CMakeLists.txt  driver.cc
